--- a/src/index.html
+++ b/src/index.html
@@ -8,39 +8,25 @@
     <script src="/src/app.js" defer></script>
     <title>Weight Converter</title>
   </head>
-  <body
-    class="bg-gradient-to-t from-blue-400 to-indigo-200 h-screen grid place-content-center"
-  >
-    <h1 class="text-center text-4xl p-12 font-bold text-white">
-      WEIGHT CONVERTER
-    </h1>
-    <div
-      id="container"
-      class="flex flex-col justify-around backdrop-blur-sm bg-white/30 rounded-3xl hover:bg-white/40 transition-all p-8 text-slate-800"
-    >
-      <div id="kg-container" class="bg-white p-6 rounded-3xl">
-        <div class="flex justify-between items-center">
-          <input
-            type="number"
-            id="kg-input"
-            class="block w-2/3 p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs outline-none"
-          />
-          <p>Kg</p>
-        </div>
+  <body class="overflow-hidden bg-white">
+    <h1 class="text-center text-2xl p-4 bg-slate-100">WEIGHT CONVERTER</h1>
+    <div id="container" class="bg-red-500 p-4 grid gap-12">
+      <div id="kg-container">
+        <p class="block mb-2 text-2xl font-medium text-gray-900">Kg</p>
+        <input
+          type="number"
+          id="kg-input"
+          class="p-2.5 text-xl w-full bg-gray-50 border border-gray-300 text-gray-900 rounded-lg"
+        />
       </div>
-      <div id="lb-container" class="bg-white p-6 rounded-3xl">
-        <div class="flex justify-between items-center">
-          <input
-            type="number"
-            id="lb-input"
-            class="block w-2/3 p-2 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-xs outline-none"
-          />
-          <p>Lb</p>
-        </div>
+      <div id="lb-container ">
+        <p class="block mb-2 text-2xl font-medium text-gray-900">Lb</p>
+        <input
+          type="number"
+          id="lb-input"
+          class="p-2.5 w-full bg-gray-50 border border-gray-300 text-gray-900 text-xl rounded-lg"
+        />
       </div>
     </div>
-    <a href="https://github.com/enes-96/weight-converter" target="_blank">
-      <p class="absolute top-0 left-0">enes-69</p>
-    </a>
   </body>
 </html>
