--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
   </head>
   <body class="overflow-hidden bg-white">
     <h1 class="text-center text-2xl p-4 bg-slate-100">WEIGHT CONVERTER</h1>
-    <div id="container" class="bg-red-500 p-4 grid gap-12">
+    <div
+      id="container"
+      class="bg-red-500 p-4 grid gap-12 2xl:w-2/4 2xl:m-auto 2xl:mt-40 2xl:rounded-xl 2xl:p-12"
+    >
       <div id="kg-container">
         <p class="block mb-2 text-2xl font-medium text-gray-900">Kg</p>
         <input
